# infantry3

./: README.md  ROS2_learning.md
galaxy_camera/: CMakeLists.txt  package.xml
galaxy_camera/config/: camera_info2.yaml  camera_params.yaml
galaxy_camera/include/: GxCamera.h
galaxy_camera/launch/: galaxy_camera.launch.py
galaxy_camera/src/: GxCamera.cpp
rm_auto_aim/armor_detector/: CMakeLists.txt  package.xml
rm_auto_aim/armor_detector/include/armor_detector/: detector_node.hpp  pnp_solver.hpp
rm_auto_aim/armor_detector/model/: readme.txt
rm_auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
rm_auto_aim/armor_processor/: CMakeLists.txt  package.xml
rm_auto_aim/armor_processor/include/armor_processor/: processor_node.hpp  tracker.hpp
rm_auto_aim/armor_processor/src/: extended_kalman_filter.cpp  processor_node.cpp  tracker.cpp
rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt
rm_auto_aim/auto_aim_interfaces/msg/: DebugArmor.msg  GameStatus.msg  Target.msg
rm_description/: CMakeLists.txt
rm_description/launch/: view_model.launch.py
rm_description/urdf/: pioneer_gimbal.urdf.xacro
rm_serial_driver/: package.xml
rm_serial_driver/config/: serial_driver.yaml
rm_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
rm_serial_driver/src/: rm_serial_driver.cpp
rm_vision_bringup/: CMakeLists.txt
rm_vision_bringup/config/: camera_info.yaml  camera_info1.yaml  camera_info2.yaml  params.yaml
rm_vision_bringup/launch/: no_hardware.launch.py  vision_bringup.launch.py
roborts_test/: CMakeLists.txt  package.xml
roborts_test/src/: energy_test.cpp  message_pub.cpp  video_pub.cpp
